harness/test/errors/050_dot_on_string.eu
# Mistake: using dot notation to access a field on a string (OOP-style method call)
s: "hello"
result: s.length
